[BOD-820] Fix Overflow

--- a/src/generic/_base.scss
+++ b/src/generic/_base.scss
@@ -4,7 +4,6 @@
 html {
   scroll-behavior: smooth;
   max-width: 100%;
-  overflow-x: hidden;
 }
 
 body {
